@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024 hstr0100
+ * Copyright (C) 2025 hstr0100
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,16 +18,16 @@ package net.brlns.gdownloader.downloader;
 
 import jakarta.annotation.Nullable;
 import jakarta.annotation.PreDestroy;
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.nio.ByteBuffer;
-import java.nio.channels.Channels;
-import java.nio.channels.ReadableByteChannel;
+import java.io.InputStreamReader;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
@@ -35,19 +35,15 @@ import net.brlns.gdownloader.GDownloader;
 import net.brlns.gdownloader.downloader.enums.DownloadStatusEnum;
 import net.brlns.gdownloader.downloader.enums.DownloaderIdEnum;
 import net.brlns.gdownloader.downloader.structs.DownloadResult;
-import net.brlns.gdownloader.downloader.structs.MediaInfo;
-import net.brlns.gdownloader.persistence.PersistenceManager;
 import net.brlns.gdownloader.settings.QualitySettings;
-import net.brlns.gdownloader.settings.enums.AudioBitrateEnum;
 import net.brlns.gdownloader.settings.enums.AudioContainerEnum;
 import net.brlns.gdownloader.settings.enums.DownloadTypeEnum;
-import net.brlns.gdownloader.settings.enums.ThumbnailContainerEnum;
-import net.brlns.gdownloader.settings.enums.VideoContainerEnum;
 import net.brlns.gdownloader.settings.filters.AbstractUrlFilter;
 import net.brlns.gdownloader.ui.menu.IMenuEntry;
 import net.brlns.gdownloader.ui.menu.RunnableMenuEntry;
 import net.brlns.gdownloader.util.DirectoryUtils;
 import net.brlns.gdownloader.util.FileUtils;
+import net.brlns.gdownloader.util.FlagUtil;
 import net.brlns.gdownloader.util.Pair;
 
 import static net.brlns.gdownloader.downloader.enums.DownloadFlagsEnum.*;
@@ -58,7 +54,12 @@ import static net.brlns.gdownloader.settings.enums.DownloadTypeEnum.*;
  * @author Gabriel / hstr0100 / vertx010
  */
 @Slf4j
-public class YtDlpDownloader extends AbstractDownloader {
+public class SpotDLDownloader extends AbstractDownloader {
+
+    private static final byte NOTIFY_COOKIE_JAR = 0x01;
+    private static final byte NOTIFY_USER_AUTH = 0x02;
+
+    private final AtomicInteger notificationFlags = new AtomicInteger();
 
     @Getter
     @Setter
@@ -68,41 +69,38 @@ public class YtDlpDownloader extends AbstractDownloader {
     @Setter
     private Optional<File> ffmpegPath = Optional.empty();
 
-    public YtDlpDownloader(DownloadManager managerIn) {
+    public SpotDLDownloader(DownloadManager managerIn) {
         super(managerIn);
     }
 
     @Override
     public boolean isEnabled() {
-        return getExecutablePath().isPresent();// TODO: allow disabling?
+        return getExecutablePath().isPresent()
+            && main.getConfig().isSpotDLEnabled();
     }
 
     @Override
     public DownloaderIdEnum getDownloaderId() {
-        return DownloaderIdEnum.YT_DLP;
+        return DownloaderIdEnum.SPOTDL;
     }
 
     @Override
     public boolean isMainDownloader() {
-        return true;
+        return false;
     }
 
     @Override
     public List<DownloadTypeEnum> getArchivableTypes() {
-        return List.of(VIDEO, AUDIO);
+        return Collections.singletonList(SPOTIFY);
     }
 
     @Override
     public void removeArchiveEntry(QueueEntry queueEntry) {
-        if (!queueEntry.getQueried().get()) {// We can't have the id we need without querying for it.
-            return;
-        }
-
         try {
             for (DownloadTypeEnum downloadType : getArchivableTypes()) {
                 FileUtils.removeLineIfExists(
                     getArchiveFile(downloadType),
-                    queueEntry.getMediaInfo().getId());
+                    queueEntry.getUrl());
             }
         } catch (Exception e) {
             log.error("Failed to remove archive entry for video: {}", queueEntry.getUrl(), e);
@@ -111,96 +109,41 @@ public class YtDlpDownloader extends AbstractDownloader {
 
     @Override
     protected boolean canConsumeUrl(String inputUrl) {
-        return isEnabled()
-            && !(inputUrl.contains("ytimg")
-            || inputUrl.contains("ggpht")
-            || inputUrl.endsWith("youtube.com/")
-            || inputUrl.endsWith(".jpg")
-            || inputUrl.endsWith(".png")
-            || inputUrl.endsWith(".webp"));
+        return isEnabled() && inputUrl.contains("spotify.com");
     }
 
     @Override
     protected boolean tryQueryVideo(QueueEntry queueEntry) {
-        try {
-            long start = System.currentTimeMillis();
+        // TODO
+        return false;
+    }
 
-            List<String> arguments = new ArrayList<>();
-            arguments.addAll(List.of(
-                executablePath.get().getAbsolutePath(),
-                "--dump-json",
-                "--flat-playlist",
-                //"--extractor-args",// TODO: Sometimes complains about missing PO token, unreproducible. Investigate.
-                //"youtube:player_skip=webpage,configs,js;player_client=android,web",
-                queueEntry.getUrl()
-            ));
+    @Nullable
+    @Override
+    public File getCookieJarFile() {
+        File cookieJar = super.getCookieJarFile();
 
-            if (main.getConfig().isReadCookiesFromBrowser()) {
-                arguments.addAll(List.of(
-                    "--cookies-from-browser",
-                    main.getBrowserForCookies().getName()
-                ));
-            } else {
-                File cookieJar = getCookieJarFile();
-                if (cookieJar != null) {
-                    arguments.addAll(List.of(
-                        "--cookies",
-                        cookieJar.getAbsolutePath()
-                    ));
-                }
-            }
+        // Lets not spam the logs for every download.
+        if (cookieJar == null && !FlagUtil.isSet(notificationFlags, NOTIFY_COOKIE_JAR)) {
+            log.info("""
+                If you have an YouTube Music Premium account, consider setting up a cookies.txt file at:
+                    {}
+                for better quality downloads (256kbps vs 128kbps). Please visit
+                    https://github.com/spotDL/spotify-downloader/blob/master/docs/usage.md#youtube-music-premium
+                for more information""", cookieJar);
 
-            List<String> list = GDownloader.readOutput(
-                arguments.stream().toArray(String[]::new));
-
-            if (main.getConfig().isDebugMode()) {
-                long what = System.currentTimeMillis() - start;
-                double on = 1000L * 365.25 * 24 * 60 * 60 * 1000;
-                double earth = (what / on) * 100;
-
-                log.info("The slow as molasses thing took {}ms, jesus man! that's about {}% of a millenium",
-                    what, String.format("%.12f", earth));
-            }
-
-            for (String line : list) {
-                if (!line.startsWith("{")) {
-                    continue;
-                }
-
-                MediaInfo info = GDownloader.OBJECT_MAPPER.readValue(line, MediaInfo.class);
-
-                queueEntry.setMediaInfo(info);
-
-                PersistenceManager persistence = main.getPersistenceManager();
-                if (!queueEntry.getCancelHook().get() && persistence.isInitialized()) {
-                    persistence.getMediaInfos().addMediaInfo(info.toEntity(queueEntry.getDownloadId()));
-                }
-
-                return true;
-            }
-        } catch (Exception e) {
-            log.error("Failed to parse json, yt-dlp returned malformed data for url {}", queueEntry.getUrl(), e);
+            FlagUtil.set(notificationFlags, NOTIFY_COOKIE_JAR);
         }
 
-        return false;
+        return cookieJar;
     }
 
     @Override
     protected DownloadResult tryDownload(QueueEntry entry) throws Exception {
         AbstractUrlFilter filter = entry.getFilter();
 
-        boolean downloadAudio = main.getConfig().isDownloadAudio();
-        boolean downloadVideo = main.getConfig().isDownloadVideo();
-
-        if (!downloadAudio && !downloadVideo) {
-            return new DownloadResult(combineFlags(FLAG_NO_METHOD, FLAG_NO_METHOD_VIDEO));
-        }
-
-        QualitySettings quality = filter.getQualitySettings();
-        AudioBitrateEnum audioBitrate = quality.getAudioBitrate();
-
-        if (!downloadVideo && downloadAudio && audioBitrate == AudioBitrateEnum.NO_AUDIO) {
-            return new DownloadResult(combineFlags(FLAG_NO_METHOD, FLAG_NO_METHOD_AUDIO));
+        if (!main.getConfig().isSpotDLEnabled()) {
+            return new DownloadResult(FLAG_DOWNLOADER_DISABLED);
         }
 
         File finalPath = main.getOrCreateDownloadsDirectory();
@@ -212,18 +155,20 @@ public class YtDlpDownloader extends AbstractDownloader {
 
         genericArguments.addAll(List.of(
             executablePath.get().getAbsolutePath(),
-            "-i"
+            "--simple-tui"//As far as I can tell, these change nothing. The way it's displayed now, Java cannot read SpotDL's progress bar.
+        //, "--log-level", "DEBUG"
         ));
+
+        if (main.getConfig().isRespectSpotDLConfigFile()) {
+            // We can't specify config location for spotDL, our only choice is to copy or symlink it.
+            genericArguments.add("--config");
+        }
 
         if (ffmpegPath.isPresent()) {
             genericArguments.addAll(List.of(
-                "--ffmpeg-location",
-                ffmpegPath.get().getAbsolutePath()
+                "--ffmpeg",
+                ffmpegPath.get().getAbsolutePath() + File.separator + "ffmpeg.exe"
             ));
-        }
-
-        if (!main.getConfig().isRespectYtDlpConfigFile()) {
-            genericArguments.add("--ignore-config");
         }
 
         genericArguments.addAll(filter.getArguments(this, ALL, manager, tmpPath, entry.getUrl()));
@@ -231,16 +176,11 @@ public class YtDlpDownloader extends AbstractDownloader {
         boolean success = false;
         String lastOutput = "";
 
-        boolean alreadyDownloaded = false;
-
         for (DownloadTypeEnum type : DownloadTypeEnum.values()) {
             boolean supported = getDownloadTypes().contains(type);
 
-            if (!supported
-                || type == VIDEO && !downloadVideo
-                || type == AUDIO && !main.getConfig().isDownloadAudio()
-                || type == SUBTITLES && (alreadyDownloaded || !main.getConfig().isDownloadSubtitles())
-                || type == THUMBNAILS && (alreadyDownloaded || !main.getConfig().isDownloadThumbnails())) {
+            if (!supported || type != SPOTIFY
+                || !main.getConfig().isSpotDLEnabled()) {
                 continue;
             }
 
@@ -268,23 +208,15 @@ public class YtDlpDownloader extends AbstractDownloader {
             lastOutput = result.getValue();
 
             if (result.getKey() != 0) {
+                // SpotDL will attempt to download anything you feed it, even non-spotify links.
+                // Since this behavior is undesirable for our use case (downloads take longer to exit),
+                // we must limit its functionality to Spotify links only.
                 if (lastOutput.contains("Unsupported URL")) {
                     return new DownloadResult(FLAG_UNSUPPORTED, lastOutput);
                 }
 
-                if (type == VIDEO || type == AUDIO) {
-                    return new DownloadResult(FLAG_MAIN_CATEGORY_FAILED, lastOutput);
-                } else {
-                    // These can be treated as low priority downloads since thumbnails
-                    // and subtitles are already embedded by default, if they fail we just move on.
-                    // For now, downloading only subs or thumbs is not supported.
-                    log.error("Failed to download {}: {}", type, lastOutput);
-                }
+                return new DownloadResult(FLAG_MAIN_CATEGORY_FAILED, lastOutput);
             } else {
-                if (lastOutput.contains("recorded in the archive")) {
-                    alreadyDownloaded = true;
-                }
-
                 success = true;
             }
         }
@@ -294,7 +226,11 @@ public class YtDlpDownloader extends AbstractDownloader {
 
     @Override
     protected Map<String, IMenuEntry> processMediaFiles(QueueEntry entry) {
-        File finalPath = main.getOrCreateDownloadsDirectory();
+        File finalPath = new File(main.getOrCreateDownloadsDirectory(), "SpotDL");
+        if (!finalPath.exists()) {
+            finalPath.mkdirs();
+        }
+
         File tmpPath = entry.getTmpDirectory();
 
         QualitySettings quality = entry.getFilter().getQualitySettings();
@@ -312,7 +248,7 @@ public class YtDlpDownloader extends AbstractDownloader {
                 }
 
                 Path relativePath = tmpPath.toPath().relativize(path);
-                Path targetPath = determineTargetPath(path, finalPath, relativePath, quality);
+                Path targetPath = finalPath.toPath().resolve(relativePath);
 
                 try {
                     if (Files.isDirectory(targetPath)) {
@@ -342,32 +278,10 @@ public class YtDlpDownloader extends AbstractDownloader {
     }
 
     private void updateRightClickOptions(Path path, QualitySettings quality, Map<String, IMenuEntry> rightClickOptions, QueueEntry entry) {
-        if (isFileType(path, quality.getVideoContainer().getValue())) {
-            rightClickOptions.putIfAbsent(l10n("gui.play_video"),
-                new RunnableMenuEntry(() -> entry.play(VideoContainerEnum.class)));
-        } else if (isFileType(path, quality.getAudioContainer().getValue())) {
+        if (isFileType(path, quality.getAudioContainer().getValue())) {
             rightClickOptions.putIfAbsent(l10n("gui.play_audio"),
                 new RunnableMenuEntry(() -> entry.play(AudioContainerEnum.class)));
-        } else if (isFileType(path, quality.getThumbnailContainer().getValue())) {
-            rightClickOptions.putIfAbsent(l10n("gui.view_thumbnail"),
-                new RunnableMenuEntry(() -> entry.play(ThumbnailContainerEnum.class)));
         }
-    }
-
-    private Path determineTargetPath(Path path, File finalPath, Path relativePath, QualitySettings quality) {
-        boolean isAudio = isFileType(path, quality.getAudioContainer().getValue());
-        boolean isVideo = isFileType(path, quality.getVideoContainer().getValue());
-        boolean isSubtitle = isFileType(path, quality.getSubtitleContainer().getValue());
-        boolean isThumbnail = isFileType(path, quality.getThumbnailContainer().getValue());
-
-        if (isAudio || isVideo
-            || (isSubtitle && main.getConfig().isDownloadSubtitles())
-            || (isThumbnail && main.getConfig().isDownloadThumbnails())
-            || Files.isDirectory(path)) {
-            return finalPath.toPath().resolve(relativePath);
-        }
-
-        return Path.of(finalPath.getAbsolutePath(), l10n("system.unknown_directory_name")).resolve(relativePath);
     }
 
     private boolean isFileType(Path path, String extension) {
@@ -379,7 +293,24 @@ public class YtDlpDownloader extends AbstractDownloader {
         long start = System.currentTimeMillis();
 
         List<String> finalArgs = new ArrayList<>(arguments);
-        finalArgs.add(entry.getUrl());
+
+        String finalUrl = entry.getUrl();
+        if (finalUrl.contains("spotify.com/collection/tracks")) {
+            finalUrl = "saved";
+        } else if (finalUrl.contains("spotify.com/collection/playlists")) {
+            // This url just redirects to /tracks, but here we can map them internally.
+            finalUrl = "all-user-playlists";
+        } else if (finalUrl.contains("spotify.com/collection/albums")) {
+            finalUrl = "all-user-saved-albums";
+        }
+
+        if (!finalUrl.contains("http")) {
+            // Accessing user playlists requires authentication
+            finalArgs.add("--user-auth");
+        }
+
+        finalArgs.add("download");
+        finalArgs.add(finalUrl);
 
         ProcessBuilder processBuilder = new ProcessBuilder(finalArgs);
         processBuilder.redirectErrorStream(true);
@@ -389,43 +320,27 @@ public class YtDlpDownloader extends AbstractDownloader {
         String lastOutput = "";
 
         try (
-            ReadableByteChannel stdInput = Channels.newChannel(process.getInputStream())) {
-            ByteBuffer buffer = ByteBuffer.allocate(4096);
-            StringBuilder output = new StringBuilder();
-            char prevChar = '\0';
-
+            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            String line;
             while (manager.isRunning() && !entry.getCancelHook().get() && process.isAlive()) {
                 if (Thread.currentThread().isInterrupted()) {
-                    log.debug("Process is closing");
                     process.destroyForcibly();
                     throw new InterruptedException("Download interrupted");
                 }
 
-                buffer.clear();
-                int bytesRead = stdInput.read(buffer);
-                if (bytesRead > 0) {
-                    buffer.flip();
+                if (reader.ready()) {
+                    if ((line = reader.readLine()) != null) {
+                        lastOutput = line;
 
-                    while (buffer.hasRemaining()) {
-                        char ch = (char)buffer.get();
-                        output.append(ch);
-
-                        if (ch == '\n' || (ch == '\r' && prevChar != '\n')) {
-                            lastOutput = output.toString().replace("\n", "");
-                            output.setLength(0);
-                        }
-
-                        prevChar = ch;
+                        processProgress(entry, lastOutput);
                     }
-
-                    processProgress(entry, lastOutput);
-                }
-
-                try {
-                    Thread.sleep(100);
-                } catch (InterruptedException e) {
-                    log.debug("Sleep interrupted, closing process");
-                    process.destroyForcibly();
+                } else {
+                    try {
+                        Thread.sleep(100);
+                    } catch (InterruptedException e) {
+                        log.debug("Sleep interrupted, closing process");
+                        process.destroyForcibly();
+                    }
                 }
             }
 
@@ -457,27 +372,32 @@ public class YtDlpDownloader extends AbstractDownloader {
     }
 
     private void processProgress(QueueEntry entry, String lastOutput) {
-        double lastPercentage = entry.getMediaCard().getPercentage();
+        if (main.getConfig().isDebugMode()) {
+            log.debug("[{}] - {}", entry.getDownloadId(), lastOutput);
+        }
 
-        if (lastOutput.contains("[download]") && !lastOutput.contains("Destination:")) {
-            String[] parts = lastOutput.split("\\s+");
-            for (String part : parts) {
-                if (part.endsWith("%")) {
-                    double percent = Double.parseDouble(part.replace("%", ""));
-                    if (percent > lastPercentage || percent < 5
-                        || Math.abs(percent - lastPercentage) > 10) {
-                        entry.getMediaCard().setPercentage(percent);
-                        lastPercentage = percent;
-                    }
+        if (lastOutput.contains("Replacing with empty") || lastOutput.endsWith("string.")) {
+            return;
+        }
+
+        if (lastOutput.contains("Go to the following URL: ")) {
+            if (!FlagUtil.isSet(notificationFlags, NOTIFY_USER_AUTH)) {
+                int httpIndex = lastOutput.indexOf("https://");
+
+                if (httpIndex != -1) {
+                    String url = lastOutput.substring(httpIndex).trim();
+                    main.openUrlInBrowser(url);
+
+                    FlagUtil.set(notificationFlags, NOTIFY_USER_AUTH);
                 }
             }
+        }
 
-            entry.updateStatus(DownloadStatusEnum.DOWNLOADING, lastOutput.replace("[download] ", ""), false);
+        if (lastOutput.contains("Downloading")) {
+            entry.getMediaCard().setPercentage(-1);
+
+            entry.updateStatus(DownloadStatusEnum.DOWNLOADING, lastOutput);
         } else {
-            if (main.getConfig().isDebugMode()) {
-                log.debug("[{}] - {}", entry.getDownloadId(), lastOutput);
-            }
-
             if (entry.getDownloadStarted().get()) {
                 entry.updateStatus(DownloadStatusEnum.PROCESSING, lastOutput);
             } else {
